# chess

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  arena.toml  bots.toml  package-lock.json  package.json  pnpm-workspace.yaml  renovate.json
.github/workflows/: ci.yml  release.yml
apps/web/bot-arena-ui/: package.json  svelte.config.js  vite.config.ts
apps/web/bot-arena-ui/src/: app.css  app.html
apps/web/bot-arena-ui/src/lib/: api.ts  fen.test.ts  fen.ts  types.ts  ws.ts
apps/web/bot-arena-ui/src/lib/components/: EvalBar.svelte
apps/web/bot-arena-ui/src/routes/: +layout.svelte  +page.svelte  +page.ts
apps/web/bot-arena-ui/src/routes/bots/[name]/: +page.svelte
apps/web/bot-arena-ui/src/routes/games/: +page.svelte
apps/web/bot-arena-ui/src/routes/games/[id]/: +page.svelte
apps/web/bot-arena-ui/src/routes/match/live/[id]/: +page.svelte
apps/web/bot-arena-ui/src/routes/match/new/: +page.svelte
apps/web/bot-arena-ui/src/routes/openings/: +page.svelte
apps/web/bot-arena-ui/src/routes/stats/: +page.svelte
apps/web/chess-devtools/svelte-test-ui/: package-lock.json  package.json  vite.config.ts
apps/web/chess-devtools/svelte-test-ui/src/: app.css  app.d.ts
apps/web/chess-devtools/svelte-test-ui/src/lib/: index.ts
apps/web/chess-devtools/svelte-test-ui/src/lib/components/: Board.svelte  BotDebugPanel.svelte  BotPanel.svelte  DebugPanel.svelte  GameControls.svelte  MoveHistory.svelte  Piece.svelte  PromotionDialog.svelte  Square.svelte
apps/web/chess-devtools/svelte-test-ui/src/lib/pieces/: index.ts
apps/web/chess-devtools/svelte-test-ui/src/lib/sounds/: index.ts
apps/web/chess-devtools/svelte-test-ui/src/lib/stores/: bot.ts  game.ts
apps/web/chess-devtools/svelte-test-ui/src/lib/wasm/: index.ts
apps/web/chess-devtools/svelte-test-ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
apps/web/chess-devtools/svelte-test-ui/static/: chess_wasm_bg.wasm
crates/bot-arena/: Cargo.toml
crates/bot-arena-server/: Cargo.toml  README.md
crates/bot-arena-server/src/: analysis.rs  db.rs  elo.rs  lib.rs  main.rs  models.rs  watcher.rs  ws.rs
crates/bot-arena-server/src/api/: analysis.rs  bots.rs  export.rs  matches.rs  mod.rs  openings.rs  presets.rs  stats.rs
crates/bot-arena-server/src/middleware/: mod.rs  timing.rs
crates/bot-arena-server/src/repo/: bots.rs  matches.rs  mod.rs
crates/bot-arena-server/src/templates/: board.rs  bot_export.rs  game_export.rs  match_export.rs  mod.rs
crates/bot-arena-server/templates/: export_bot.html  export_game.html  export_match.html
crates/bot-arena-server/templates/components/: board.html
crates/bot-arena-worker/: Cargo.toml  README.md
crates/bot-arena-worker/src/: db.rs  elo.rs  main.rs  runner.rs
crates/bot-arena/src/: config.rs  game_runner.rs  json_output.rs  lib.rs  main.rs  pgn.rs  storage.rs  uci_client.rs
crates/bot-bridge/: Cargo.toml
crates/bot-bridge/src/: config.rs  main.rs  session.rs
crates/bot-minimax/: Cargo.toml
crates/bot-minimax/src/: main.rs
crates/bot-random/: Cargo.toml
crates/bot-random/src/: main.rs
crates/chess-analysis/: Cargo.toml  README.md
crates/chess-analysis/src/: analyzer.rs  engine.rs  evaluation.rs  lib.rs  quality.rs
crates/chess-analysis/tests/: integration.rs
crates/chess-core/: Cargo.toml
crates/chess-core/src/: color.rs  fen.rs  lib.rs  mov.rs  piece.rs  square.rs
crates/chess-engine/: Cargo.toml
crates/chess-engine/src/: bitboard.rs  game.rs  lib.rs  movegen.rs  position.rs  san.rs  zobrist.rs
crates/chess-engine/src/movegen/: attacks.rs  magics.rs  mod.rs  perft.rs
crates/chess-engine/src/rules/: mod.rs  standard.rs
crates/chess-openings/: Cargo.toml
crates/chess-openings/src/: builtin.rs  database.rs  lib.rs  opening.rs
crates/chess-wasm/: Cargo.toml
crates/chess-wasm/src/: lib.rs
crates/uci/: Cargo.toml
crates/uci/src/: command.rs  extension.rs  info.rs  lib.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  bot-arena-architecture.md  deployment.md
docs/plans/: 2025-01-20-bot-arena-design.md  2025-01-20-bot-arena-phase1.md  2025-01-20-bot-arena-phase2.md  2025-01-20-bot-arena-phase3.md  2025-01-20-bot-plugin-system-design.md  2025-01-20-chess-monorepo-design.md  2025-01-20-phase4-implementation.md  2025-01-20-phase4-shared-libraries.md  2025-01-21-phase5-ui-mvp-design.md  2025-01-21-phase5-ui-mvp-implementation.md  2025-01-21-phase6-design.md  2025-01-21-phase6-implementation.md  2025-01-21-phase7-design.md  2025-01-21-phase7-implementation.md  2026-01-20-chess-devtools-svelte-test-ui-design.md  2026-01-20-game-rules-completion-design.md  2026-01-20-move-generation-design.md
