[workspace]
resolver = "2"
members = [
    "crates/chess-core",
    "crates/chess-engine",
    "crates/chess-analysis",
    "crates/chess-openings",
    "crates/chess-wasm",
    "crates/uci",
    "crates/bot-random",
    "crates/bot-minimax",
    "crates/bot-bridge",
    "crates/bot-arena",
    "crates/bot-arena-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tommetten/chess"
authors = ["Tom Metten"]

[workspace.dependencies]
chess-core = { path = "crates/chess-core" }
chess-engine = { path = "crates/chess-engine" }
uci = { path = "crates/uci" }
thiserror = "1.0"
proptest = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
toml = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
