[package]
name = "bot-arena-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
askama = "0.15"
axum = { version = "0.7", features = ["ws"] }
bot-arena = { path = "../bot-arena" }
chess-openings = { path = "../chess-openings" }
futures-util = "0.3"
tokio.workspace = true
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"

[dev-dependencies]
http-body-util = "0.1"
