[package]
name = "bot-arena"
version = "0.1.0"
edition = "2021"

[dependencies]
chess-engine = { path = "../chess-engine" }
chess-core = { path = "../chess-core" }
uci = { path = "../uci" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
toml = "0.8"
