[package]
name = "bot-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket bridge server for UCI chess bots"

[[bin]]
name = "bot-bridge"
path = "src/main.rs"

[dependencies]
uci.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
