[package]
name = "chess-analysis"
version = "0.1.0"
edition = "2021"
description = "Chess position analysis with Stockfish integration"

[dependencies]
chess-core = { path = "../chess-core" }
chess-engine = { path = "../chess-engine" }
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
serde_json = "1"
