[package]
name = "chess-core"
description = "Core types for chess: pieces, squares, moves, and FEN notation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
