[package]
name = "chess-wasm"
description = "WebAssembly bindings for the chess engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chess-core.workspace = true
chess-engine = { path = "../chess-engine" }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for size in WASM
opt-level = "s"
